--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 
     <header>
-        <h1>My To Do List</h1>
+        <h1>Todo List</h1>
     </header>
     <form action="">
         <input type="text" class="todo-input">
